# wireless-system-simulation-validation

./: 01_beam_sweeping_and_beam_selection_simulation
01_beam_sweeping_and_beam_selection_simulation/: README.md
02-pdsch-oriented-5g-nr-massive-mimo-ofdm-link-simulator/: README.md
02-pdsch-oriented-5g-nr-massive-mimo-ofdm-link-simulator/matlab/: README.md
02-pdsch-oriented-5g-nr-massive-mimo-ofdm-link-simulator/python/: .gitignore  README_PYTHON.md  build_frame.py  compact_mainflow_record.txt  compute_precoder.py  config.py  crc24a.py  cross_verification_record.txt  cross_verification_record_massive.txt  cross_verify_csv.py  equalize.py  estimate_ls.py  gates.py  generate_channel.py  link_curve.py  main.py  matlab_compact_ref.csv  matlab_massive_provenance.txt  matlab_results_massive.csv  metrics.py  mimo_channel.py  nr_gold_sequence.py  ofdm.py  pyproject.toml  python_compact_mainflow.csv  python_results_massive.csv  python_results_massive_config.txt  qam.py  requirements.txt  run_comparisons.py  run_massive_mimo.py  scramble_bits.py  write_config_log.py
03_Cross_Verified_Statistically_Qualified_5G_NR_Massive_MIMO_OFDM_Simulator/: README.md
04-PCC-SVD-and-DM-RS-Based-64x8-Massive-MIMO-OFDM-MATLAB-Python-Simulink-Testbench/: README.md
PCC-SVD-and-DM-RS-Based-64x8-Massive-MIMO-OFDM-MATLAB-Python-Simulink-Testbench/: README.md
